style: ensure heading does not overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -308,7 +308,6 @@ nav h1 a {
   letter-spacing: 0;
   margin: 15px 0 30px;
   text-transform: uppercase;
-  line-height: 1.1;
 }
 #restaurant-img {
   width: 90%;
